Add markdown support for info attributes